# 6.0-Personal-Tech-Portfolios

1-Book-Showcase/1-1-Love-Book/Anti-Attachment/Manuscript/Draft/: Line.docx
1-Book-Showcase/1-1-Love-Book/Anti-Attachment/Promotion/: Scripts.docx  Social Media.docx
1-Book-Showcase/1-1-Love-Book/Anti-Attachment/Publishing/: Agent Submission.docx
1-Book-Showcase/1-2-Tool-Book/1-2-1-U.S.-Systems-Immigrant's-Guide/Scripts/English/: III-U.S. Tax System.docx  IV-U.S. Education and Social Security.docx  V-U.S. Daily Life and Culture.docx  VII-Professional-Knowledge.docx
1-Book-Showcase/1-2-Tool-Book/1-2-1-U.S.-Systems-Immigrant's-Guide/Scripts/中文/: V-美国日常生活与文化.docx
1-Book-Showcase/1-2-Tool-Book/1-2-1-U.S.-Systems-Immigrant's-Guide/Table-of-Content/: EN-Encyclopedia of U.S- Systems-An Immigrant's Guide.docx  美国制度百科全书-移民指南.docx
1-Book-Showcase/1-3-Professinal-Book/1-3-2-Quant-in-the-Age-of-AI/: Quant in the Age of AI.docx
1-Book-Showcase/1-3-Professinal-Book/1-3-2-Quant-in-the-Age-of-AI/Part I. Finance/: Jargon.docx
1-Book-Showcase/1-3-Professinal-Book/1-3-2-Quant-in-the-Age-of-AI/Part II. Models/: Models-draft.docx
1-Book-Showcase/1-3-Professinal-Book/1-3-2-Quant-in-the-Age-of-AI/Part III. Artificial Intelligence/: LLM-draft.docx  Overview.docx
1-Book-Showcase/1-4-Life-Book/1-4-2-My-Life-in-NYC/: Table of Content.docx
1-Book-Showcase/1-4-Life-Book/1-4-2-My-Life-in-NYC/Scripts/Part I- Work/: Diary.docx
1-Book-Showcase/1-4-Life-Book/1-4-2-My-Life-in-NYC/Scripts/Part II- Dating/: Chapter II.docx  Chapter IV.docx  Chapter V.docx  Chapter VI.docx
1-Book-Showcase/1-4-Life-Book/1-4-2-My-Life-in-NYC/Scripts/Part III- Social Network/: II-Coffee-Chat-Diary.docx
1-Book-Showcase/1-4-Life-Book/1-4-2-My-Life-in-NYC/Scripts/Part IV- Identity/: IV How I Live My Life.docx
1-Book-Writing/1-1-Love-Book/1-1-Anti-Attachment/: Character Sheets.docx  test.docx
1-Book-Writing/1-1-Love-Book/1-1-Anti-Attachment/Manuscript/: Scripts.docx  Table of Content.docx
1-Book-Writing/1-1-Love-Book/1-1-Anti-Attachment/Promotion/: Marketing Ideas.docx
1-Book-Writing/1-1-Love-Book/1-1-Anti-Attachment/Publishing/: Proposal to Agency.docx  Query Letters.docx
1-Book-Writing/1-2-Tool-Book/1-2-1-U.S.-Systems-Immigrant's-Guide/Book/Table-of-Content/: EN-Encyclopedia of U.S- Systems-An Immigrant's Guide.docx
1-Book-Writing/1-2-Tool-Book/1-2-1-U.S.-Systems-Immigrant's-Guide/Scripts/English/: VI-Common Sense.docx  VIII-Geographical-Knowledge.docx
1-Book-Writing/1-2-Tool-Book/1-2-1-U.S.-Systems-Immigrant's-Guide/Scripts/中文/: IV-美国教育与社会保障.docx  V-美国日常生活与文化.docx
1-Book-Writing/1-2-Tool-Book/1-2-1-U.S.-Systems-Immigrant's-Guide/Table-of-Content/: 美国制度百科全书-移民指南.docx
1-Book-Writing/1-2-Tool-Book/1-2-1-U.S.-Systems-Immigrant's-Guide/Website/: ideas.md  package.json
1-Book-Writing/1-2-Tool-Book/1-2-1-U.S.-Systems-Immigrant's-Guide/Website/client/: index.html
1-Book-Writing/1-2-Tool-Book/1-2-2-English-Immigrant's-Guide/: Chapter & Scripts.docx  Table of Content.docx
1-Book-Writing/1-2-Tool-Book/1-2-2-English-Immigrant's-Guide/Book/: Proposal.docx
1-Book-Writing/1-2-Tool-Book/1-2-2-English-Immigrant's-Guide/Website/: ideas.md
1-Book-Writing/1-2-Tool-Book/1-2-2-English-Immigrant's-Guide/Website/client/: index.html
1-Book-Writing/1-3-Professional-Book/1-3-1-Industry-Overview/: Table of Contents.docx
1-Book-Writing/1-3-Professional-Book/1-3-1-Industry-Overview/Website/: ideas.md  package.json
1-Book-Writing/1-3-Professional-Book/1-3-2-Quant-in-the-Age-of-AI/Book/: Table-of-Content.docx
1-Book-Writing/1-3-Professional-Book/1-3-2-Quant-in-the-Age-of-AI/Part I. Finance/: Jargon.docx  Macro:Risk Factors.docx
1-Book-Writing/1-3-Professional-Book/1-3-2-Quant-in-the-Age-of-AI/Website/: ideas.md  package.json
1-Book-Writing/1-4-Life-Book/1-4-1-My-Fashion-in-NYC/Book/: 1-Table-of-content.docx  2-Automation-Path.docx  3-Execution-Path.docx
1-Book-Writing/1-4-Life-Book/1-4-1-My-Fashion-in-NYC/Website/: ideas.md  package.json
1-Book-Writing/1-4-Life-Book/1-4-3-Education/Content/: Dairy.md
1-Book-Writing/1-4-Life-Book/1-4-3-How-to-Educate/Book/: Promotion.docx
1-Book-Writing/1-4-Life-Book/1-4-4-My-Financial-Plan/Website/: package.json  todo.md
3-Learning-and-Resources/3-2-CS-Learning/1-Foundations/: Overview.docx
3-Learning-and-Resources/3-2-CS-Learning/2-Programming/C++/Exercises/cmake_library/: CMakeLists.txt
3-Learning-and-Resources/3-2-CS-Learning/2-Programming/C++/Exercises/cmake_library/include/: UtilityLibrary.h
3-Learning-and-Resources/3-2-CS-Learning/2-Programming/C++/Exercises/cmake_library/src/: Logger.cpp  StringUtils.cpp
3-Learning-and-Resources/3-2-CS-Learning/2-Programming/C++/Exercises/game_engine/: CMakeLists.txt  CMakeLists_test.txt  test_game_engine  test_game_engine.cpp
3-Learning-and-Resources/3-2-CS-Learning/2-Programming/C++/Exercises/game_engine/include/: GameEngine.h
3-Learning-and-Resources/3-2-CS-Learning/2-Programming/C++/Exercises/game_engine/src/: GameEngine.cpp
3-Learning-and-Resources/3-2-CS-Learning/2-Programming/C++/Exercises/game_engine/test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
3-Learning-and-Resources/3-2-CS-Learning/2-Programming/C++/Exercises/webassembly/: CMakeLists.txt
3-Learning-and-Resources/3-2-CS-Learning/2-Programming/C++/Exercises/webassembly/src/: main.cpp
3-Learning-and-Resources/3-2-CS-Learning/2-Programming/Python/: Table & Data.ipynb  Visualization.ipynb  requirements.txt  sample.csv
3-Learning-and-Resources/3-2-CS-Learning/3-Systems & Tools & Ecosystem/: Content.docx
3-Learning-and-Resources/3-2-CS-Learning/3-Systems & Tools & Ecosystem/Protocols & Integration/: Note.md
3-Learning-and-Resources/3-3-Certification/CFA/: .~Study-Plan.xlsx  CFA-Learning Notes.docx  CFA-Overview.docx  Learning Notes.docx  Study-Plan.xlsx  ~$Study-Plan.xlsx
3-Learning-and-Resources/3-3-Certification/FRM/: .~udy Note-FRM.docx  Exam Overview.docx  Study Note-FRM.docx  Study-Plan.xlsx
3-Learning-and-Resources/3-3-Certification/LSAT/: Exercise link.docx
(+193 files in other folders)
